--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,83 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/my_nanodegree_apps"
+            android:id="@+id/topTextLabel"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:text="@string/spotify_streamer"
+            android:id="@+id/spotifyStreamerButton"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:layout_marginTop="5dp"
+            android:background="#F08C35"
+            android:layout_marginBottom="5dp" />
+
+        <Button
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:text="@string/scores_app"
+            android:id="@+id/scoresAppButton"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:layout_marginTop="5dp"
+            android:background="#F08C35"
+            android:layout_marginBottom="5dp" />
+
+        <Button
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:text="@string/library_app"
+            android:id="@+id/libraryAppButton"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:background="#F08C35"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
+
+        <Button
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:text="@string/build_it_bigger"
+            android:id="@+id/buildItBiggerButton"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:background="#F08C35"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
+
+        <Button
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:text="@string/xyz_reader"
+            android:id="@+id/xyzReaderButton"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:background="#F08C35"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
+
+        <Button
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:text="@string/capstone"
+            android:id="@+id/capstoneButton"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:background="#ffff4e34"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp" />
+    </LinearLayout>
 </RelativeLayout>
