--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
             android:layout_marginTop="@dimen/button_margin"
             android:background="#F08C35"
             android:layout_marginBottom="@dimen/button_margin"
-            android:onClick="spotifyStreamerLaunch"
+            android:onClick="onButtonClickListener"
             />
 
         <Button
