--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             android:layout_marginTop="@dimen/button_margin"
-            android:background="#F08C35"
+            android:background="@color/buttons_color"
             android:layout_marginBottom="@dimen/button_margin"
             android:onClick="onButtonClickListener"
             />
@@ -34,7 +34,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
             android:layout_marginTop="@dimen/button_margin"
-            android:background="#F08C35"
+            android:background="@color/buttons_color"
             android:layout_marginBottom="@dimen/button_margin"
             android:onClick="onButtonClickListener"
             />
@@ -46,7 +46,7 @@
             android:id="@+id/libraryAppButton"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
-            android:background="#F08C35"
+            android:background="@color/buttons_color"
             android:layout_marginTop="@dimen/button_margin"
             android:layout_marginBottom="@dimen/button_margin"
             android:onClick="onButtonClickListener"
@@ -59,7 +59,7 @@
             android:id="@+id/buildItBiggerButton"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
-            android:background="#F08C35"
+            android:background="@color/buttons_color"
             android:layout_marginTop="@dimen/button_margin"
             android:layout_marginBottom="@dimen/button_margin"
             android:onClick="onButtonClickListener"
@@ -72,7 +72,7 @@
             android:id="@+id/xyzReaderButton"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
-            android:background="#F08C35"
+            android:background="@color/buttons_color"
             android:layout_marginTop="@dimen/button_margin"
             android:layout_marginBottom="@dimen/button_margin"
             android:onClick="onButtonClickListener"
@@ -85,7 +85,7 @@
             android:id="@+id/capstoneButton"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
-            android:background="#ffff4e34"
+            android:background="@color/capstone_button_color"
             android:layout_marginTop="@dimen/button_margin"
             android:layout_marginBottom="@dimen/button_margin"
             android:onClick="onButtonClickListener"
